--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,11 @@ dependencies:
 
 
   cupertino_icons: ^1.0.2
+  persistent_bottom_nav_bar_v2: ^4.2.8
+  firebase_core: ^2.22.0
+  firebase_auth: ^4.14.0
+  cloud_firestore: ^4.13.1
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
