--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   firebase_auth: ^4.14.0
   cloud_firestore: ^4.13.1
   provider: ^6.1.1
+  change_app_package_name: ^1.1.0
 
 dev_dependencies:
   flutter_test:
